Syllabus final draft

--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -31,18 +31,20 @@
 \large \textbf{Instructors} & \\
 \large Dr. \textbf{Dan} Runfola & Dr. Tyler Frazier \\
 \large dsmillerrunfol@wm.edu  & tfrazier@aiddata.org \\
-\large 427 Scottland Street & 427 Scottland Street \\
-\large Office Hours: TBD & TBD \\
-\large 757.221.1970 & 757.221.5396 \\
+\large 424 Scotland Street, Rm. 201 & 424 Scotland Street, Rm. 101 \\
+\large Office Hours: 3-5P MW & TR 10A-12P \\
+\large 508.316.9109 &   \\
 \end{tabular}
 \end{table}
 
 
 \large \textbf{Teaching Assistants} \\
-\large Name: TBD  \\
-\large Office: TBD \\
+\large Name: Ben Dykstra   \\
+\large Office: Blow Hall Room 150 (SSRMC) \\
+\large Directions: \\
+http://ssrmc.wm.edu/wp-content/uploads/2014/08/Finding-the-SSRMC.jpg \\
 \large Office Hours: TBD \\
-\large Number: TBD \\
+\large Email: bfdykstra@email.wm.edu \\
 
 
 \textit{Please let me know if you have any documented disabilities that may impact your performance in this class.}
@@ -103,6 +105,8 @@ Reading Assignments & 20\%\\ \\
 \textbf {\large Late / Poor Performance Policy:} Assignments will not be accepted late, excepting in documented circumstances (i.e., an illness with a doctor's note).  \textit{Recognizing that it is entirely possible to underperform on key days, your lowest lab assignment grade will be dropped at the end of the semester.}\\
 
 \textbf {\large Final Project:} The final project will be the culmination of your work in the second half of the semester, and will include both a written report and verbal presentation.  Final presentations will begin the final week of the course, and finish on the day of finals. \\
+
+\textbf {\large Important Dates:} The add and drop deadline this semester is September 4th, and withdrawal deadline is October 23rd.
 
 \vspace{4mm}
 \textbf {\LARGE Do not cheat!} \\
@@ -244,7 +248,7 @@ Week 9 & \begin{minipage}{.85\textwidth}
 Week 10 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 10/26 - \textbf{Guest Lecture}; 10/28 and 10/30 - Hands On Learning.
+	\item 10/26 - TBD, WCS; 10/28 and 10/30 - Hands On Learning.
 	\item Challenge II: Getting the Data (Ready)
 	\item Reading: \textit{Student-Selected}
 	\item Working with Data: Cleaning up!
@@ -257,7 +261,7 @@ Week 10 & \begin{minipage}{.85\textwidth}
 Week 11 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 11/2 - \textbf{Guest Lecture}; 11/4 and 11/6 - Hands On Learning.
+	\item 11/2 - Ingo Keilitz (National Center for State Courts); 11/4 and 11/6 - Hands On Learning.
 	\item Challenge II: Getting the Data (Ready)
 	\item Reading: \textit{Student-Selected}
 	\item Working with Data: Cleaning up!
@@ -270,7 +274,7 @@ Week 11 & \begin{minipage}{.85\textwidth}
 Week 12 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 11/9 -\textbf{ Guest Lecture}; 11/11 and 11/13 - Hands On Learning.
+	\item 11/9 - Justin Mortensen (Save the Children); 11/11 and 11/13 - Hands On Learning.
 	\item Challenge II: Getting the Data Part 2
 	\item Reading: \textit{Student-Selected}
 	\item Working with Data: Getting ready for Analyses
@@ -283,11 +287,11 @@ Week 12 & \begin{minipage}{.85\textwidth}
 Week 13 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 11/16 - \textbf{Guest Lecture}; 11/18 and 11/20 - Hands On Learning.
+	\item 11/16 - Nick Giner, ESRI; 11/18 and 11/20 - Hands On Learning.
 	\item Challenge II: Analyzing the Data
 	\item Reading: \textit{Student-Selected}
 	\item Working with Data: Running the Analysis
-	\item \textbf{First draft powerpoint presentation due (counts as a lab assignment!}
+	\item \textbf{First draft powerpoint presentation due (counts as a lab assignment!)}
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -309,6 +313,15 @@ Week 15 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 11/30, 12/2, 12/4 - Final Presentations
+	\vspace{1mm}
+\end{itemize}
+\end{minipage} \\
+\hline
+
+Final & \begin{minipage}{.85\textwidth}
+\begin{itemize} \itemsep-0.4em
+	\vspace{1mm}
+	\item 12/7 - 9AM to 12 Noon - Final Presentations
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
