Longer time for Lab 2; Assignment 2 ready to go; Updated lectures

--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -32,19 +32,10 @@
 \large Dr. \textbf{Dan} Runfola & Dr. Tyler Frazier \\
 \large dsmillerrunfol@wm.edu  & tfrazier@aiddata.org \\
 \large 424 Scotland Street, Rm. 201 & 424 Scotland Street, Rm. 101 \\
-\large Office Hours: 3-5P MW & TR 10A-12P \\
+\large Office Hours: 3-5P MW & T 2-4P, R 10A-12P \\
 \large 508.316.9109 &   \\
 \end{tabular}
 \end{table}
-
-
-\large \textbf{Teaching Assistants} \\
-\large Name: Ben Dykstra   \\
-\large Office: Blow Hall Room 150 (SSRMC) \\
-\large Directions: \\
-http://ssrmc.wm.edu/wp-content/uploads/2014/08/Finding-the-SSRMC.jpg \\
-\large Office Hours: TBD \\
-\large Email: bfdykstra@email.wm.edu \\
 
 
 \textit{Please let me know if you have any documented disabilities that may impact your performance in this class.}
@@ -68,7 +59,7 @@ Software: You must have a laptop capable of running Microsoft Excel (free versio
   \item Provide students with a critical understanding of the decision making process and the use of data and intuition on short deadlines.
   \item Develop student’s ability to communicate findings, analysis, and visualization skills for future courses (and jobs).
   \item Expose students to real-world problems that are being engaged with by contemporary problem solvers and decision makers.
-  \item Provide an opportunity to earn credit towards the COLL 200 requirement in the Natural World and Quantitative Reasoning domain (passing grade required).
+  \item Provide an opportunity to earn credit towards the COLL 200 requirement in the Culture, Society, and the Individual domain (passing grade required).
 \end{enumerate}
 \vspace{8mm}
 
@@ -177,8 +168,7 @@ Week 5 & \begin{minipage}{.85\textwidth}
 	\vspace{1mm}
 	\item 9/21 - Lecture; 9/23 and 9/25 - Hands On Learning
 	\item Challenge I: Understanding the Data \item Reading: \textit{Chapter 15 in: Decision Analysis for Management Judgment: Second Edition, Goodwin and Wright, The Analytical Hierarchy Process.}
-	\item Mid-Term Assignment [3]: Implementing the AHP –Working with Decisionmakers to make sense of data.
-	\item \textbf{Assignment 2 (Working with Data) due by midnight on 9/25!}
+	\item Assignment 2: Working with Data: Doing it right.
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -192,7 +182,8 @@ Week 6 & \begin{minipage}{.85\textwidth}
 	\item Challenge I: Analyzing the Data 
 	\item Reading: \textit{Clark, G., S. Moser, et al. (1998). "Assessing the vulnerability of coastal communities to extreme  storms: the case of Revere, MA., USA." Mitigation and Adaptation 
 Strategies for Global Change 3(1): 59-82}
-	\item Mid-Term Assignment [3]: Data Reduction: Drawing Inferences from “lots of data”
+	\item Mid-Term Assignment [3]: Data Reduction: Unlocking GIS Data
+	\item \textbf{Assignment 2 (Working with Data) due by midnight on 9/25!}
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -202,10 +193,7 @@ Week 7 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 10/5 - Lecture; 10/7 and 10/9 - Hands On Learning
-	\item Challenge I: Making the Case
-	\item Reading: \textit{Visualizing ourselves… with
-crowd-sourced data – Aaron Koblin}
-	\item No Assignment this week; preperation for mid-term (assignment 3) presentations.
+		\item Mid-Term Assignment [3]: Implementing the AHP –Working with Decisionmakers to make sense of data.
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -214,8 +202,8 @@ crowd-sourced data – Aaron Koblin}
 Week 8 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 10/12 - No Class (Fall Break); 10/14 and 10/16 - Presentations.
-	\item \textbf{Midterm Presentations and accompanying report (i.e. Assignment 3) due by midnight on Sunday, 10/11!}
+	\item 10/12 - No Class (Fall Break); 10/14 and 10/16 - Hands On Time for Assignment 3.
+	\item \textbf{Assignment 3 due by 11:59PM EST on 10/16!}
 	\item Reading: \textit{NA}
 	\item NA
 	\vspace{1mm}
@@ -248,7 +236,7 @@ Week 9 & \begin{minipage}{.85\textwidth}
 Week 10 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 10/26 - TBD, WCS; 10/28 and 10/30 - Hands On Learning.
+	\item 10/26 - Ingo Keilitz (National Center for State Courts), WCS; 10/28 and 10/30 - Hands On Learning.
 	\item Challenge II: Getting the Data (Ready)
 	\item Reading: \textit{Student-Selected}
 	\item Working with Data: Cleaning up!
@@ -261,7 +249,7 @@ Week 10 & \begin{minipage}{.85\textwidth}
 Week 11 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 11/2 - Ingo Keilitz (National Center for State Courts); 11/4 and 11/6 - Hands On Learning.
+	\item 11/2 - TBD; 11/4 and 11/6 - Hands On Learning.
 	\item Challenge II: Getting the Data (Ready)
 	\item Reading: \textit{Student-Selected}
 	\item Working with Data: Cleaning up!
