Guest lecture finalizations

--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -249,7 +249,7 @@ Week 10 & \begin{minipage}{.85\textwidth}
 Week 11 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 11/2 - TBD; 11/4 and 11/6 - Hands On Learning.
+	\item 11/2 Justin Mortensen (Save the Children)- TBD; 11/4 and 11/6 - Hands On Learning.
 	\item Challenge II: Getting the Data (Ready)
 	\item Reading: \textit{Student-Selected}
 	\item Working with Data: Cleaning up!
@@ -262,7 +262,7 @@ Week 11 & \begin{minipage}{.85\textwidth}
 Week 12 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 11/9 - Justin Mortensen (Save the Children); 11/11 and 11/13 - Hands On Learning.
+	\item 11/9 - Healy Hamilton (NatureServe); 11/11 and 11/13 - Hands On Learning.
 	\item Challenge II: Getting the Data Part 2
 	\item Reading: \textit{Student-Selected}
 	\item Working with Data: Getting ready for Analyses
