--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -145,7 +145,7 @@ Week 3 & \begin{minipage}{.85\textwidth}
 	\vspace{1mm}
 	\item 9/7 - Lecture; 9/9 and 9/11 - Hands On Learning
 	\item Challenge I: US Army Corps  \item Reading: \textit{Temporal and spatial changes in social vulnerability to natural hazards - Susan Cutter}
-	\item Assignment 2:Working with Data: Figuring out what’s wrong.
+	\item Assignment 2: Index Construction I
 	\item \textbf{"Basic Skills" Lab due by midnight on 9/11!}
 	\vspace{1mm}
 \end{itemize}
@@ -157,7 +157,7 @@ Week 4 & \begin{minipage}{.85\textwidth}
 	\vspace{1mm}
 	\item 9/14 - Lecture; 9/16 and 9/18 - Hands On Learning
 	\item Challenge I: Getting the Data  \item Reading: \textit{Vörösmarty, C., P. McIntyre, et al. (2010). "Global threats to human water security and river biodiversity." Nature 467(7315): 555-561.}
-	\item Assignment 2: Working with Data: Doing it right.
+	\item Assignment 2: Index Construction II
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -168,7 +168,7 @@ Week 5 & \begin{minipage}{.85\textwidth}
 	\vspace{1mm}
 	\item 9/21 - Lecture; 9/23 and 9/25 - Hands On Learning
 	\item Challenge I: Understanding the Data \item Reading: \textit{Chapter 15 in: Decision Analysis for Management Judgment: Second Edition, Goodwin and Wright, The Analytical Hierarchy Process.}
-	\item Assignment 2: Working with Data: Doing it right.
+	\item Assignment 2: Index Construction III
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -183,7 +183,7 @@ Week 6 & \begin{minipage}{.85\textwidth}
 	\item Reading: \textit{Clark, G., S. Moser, et al. (1998). "Assessing the vulnerability of coastal communities to extreme  storms: the case of Revere, MA., USA." Mitigation and Adaptation 
 Strategies for Global Change 3(1): 59-82}
 	\item Mid-Term Assignment [3]: Data Reduction: Unlocking GIS Data
-	\item \textbf{Assignment 2 (Working with Data) due by midnight on 9/25!}
+	\item \textbf{Assignment 2 (Working with Data) due by midnight on 10/2!}
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -225,7 +225,7 @@ Week 9 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 10/19 - Lecture; 10/21 and 10/23 - Hands On Learning.
-	Selecting a Challenge and Forming Groups
+	Selecting a Challenge; Forming Groups; Research Protocol
 	\item Reading: \textit{Student-Selected}
 	\item Finding Data: Where do I start looking?
 	\vspace{1mm}
