Reading Assignment edits and syllabus updates

--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -252,8 +252,8 @@ Week 11 & \begin{minipage}{.85\textwidth}
 	\item 11/2 Justin Mortensen (Save the Children)- TBD; 11/4 and 11/6 - Hands On Learning.
 	\item Challenge II: Getting the Data (Ready)
 	\item Reading: \textit{Student-Selected}
-	\item Working with Data: Cleaning up!
-	\item \textbf{Dataset Due for your topic of interest by midnight on 11/6! (Counts as a lab assignment!)}
+	\item \textbf{Reading summaries of at least one academic article on your topic of interest due by midnight on Friday, 11/6 (reading assignment 2)!}
+	
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -264,9 +264,7 @@ Week 12 & \begin{minipage}{.85\textwidth}
 	\vspace{1mm}
 	\item 11/9 - Healy Hamilton (NatureServe); 11/11 and 11/13 - Hands On Learning.
 	\item Challenge II: Getting the Data Part 2
-	\item Reading: \textit{Student-Selected}
-	\item Working with Data: Getting ready for Analyses
-	\item \textbf{Reading summaries of at least one academic article on your topic of interest due by midnight on Friday, 11/13 (reading assignment 2)!}
+	\item \textbf{Draft Dataset Due for your topic of interest by midnight on 11/13! (Counts as a lab assignment!)}
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -279,7 +277,7 @@ Week 13 & \begin{minipage}{.85\textwidth}
 	\item Challenge II: Analyzing the Data
 	\item Reading: \textit{Student-Selected}
 	\item Working with Data: Running the Analysis
-	\item \textbf{First draft powerpoint presentation due (counts as a lab assignment!)}
+	\item \textbf{Reading summaries of at least one academic article on your topic of interest due by midnight on Friday, 11/20 (reading assignment 3)!}
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -291,7 +289,8 @@ Week 14 & \begin{minipage}{.85\textwidth}
 	\item 11/23 - Hands On Learning; 11/25 and 11/27 - No Class (Thanksgiving)
 	\item Challenge II: Analyzing the Data
 	\item Working with Data: Building Visualizations
-	\item \textbf{Reading summaries of at least one academic article on your topic of interest due by midnight on Monday, 11/23 (reading assignment 3)!}
+\item \textbf{First draft powerpoint presentation due 11/23 (counts as a lab assignment!)}	
+	
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
