Syllabus first round 2017 Fall

--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -20,20 +20,20 @@
 
 {\includegraphics[height=1.25in,width=1in]{wmchiffre1.jpg}} 
 
-\LARGE Data Driven Decisionmaking (Fall 2015, INTR 490 (COLL 200))\\ \vspace{3mm}
+\LARGE Data Driven Decisionmaking (Fall 2017, APSC 490 (COLL 200))\\ \vspace{3mm}
 \end{center}
 \large \textbf{Schedule} \\
-\normalsize  Monday, Wednesday, and Friday 11AM to 11:50AM \textit{Morton Hall 20} \\
+\normalsize Tuesday and Thursday 9:30AM to 10:50AM \textit{Phi Beta Kappa Hall 221} \\
 \vspace{2mm}
 
 \begin{table}[ht]
 \begin{tabular}{l l}
-\large \textbf{Instructors} & \\
-\large Dr. \textbf{Dan} Runfola & Dr. Tyler Frazier \\
-\large dsmillerrunfol@wm.edu  & tfrazier@aiddata.org \\
-\large 424 Scotland Street, Rm. 201 & 424 Scotland Street, Rm. 101 \\
-\large Office Hours: 3-5P MW & T 2-4P, R 10A-12P \\
-\large 508.316.9109 &   \\
+\large \textbf{Instructor} & \\
+\large Dr. \textbf{Dan} Runfola \\
+\large danr@wm.edu   \\
+\large ISC 1269 \\
+\large Office Hours: 11-1P R \\
+\large 757.221.1970  \\
 \end{tabular}
 \end{table}
 
@@ -46,10 +46,10 @@
 
 \textbf {Credit Hours:} 3 \\
 
-\textbf {\large Books and other things you'll need to buy:}\\ 
-
-Books: None, though throughout the course I may assign readings from academic or popular journals – these will be made available through either the Swem library or online via blackboard.\\
-Software: You must have a laptop capable of running Microsoft Excel (free versions, such as open or libre office, will not work for this course due to the complexity of some spreadsheets).
+\textbf {\large Materials:}\\ 
+A free SciClone account is needed in order to access the William and Mary High Performance Cluster (HPC).  Registration can be started at https://hpc.wm.edu/acctreq/ . \\
+\\
+You must bring a laptop to class  each day unless otherwise noted during lecture.
 
 
 \vspace{8mm}
@@ -66,9 +66,8 @@ Software: You must have a laptop capable of running Microsoft Excel (free versio
 \textbf {\large Grade Distribution:} \\
 \hspace*{40mm}
 \begin{tabular}{ l l }
-Lab Assignments & 50\% \\
-Final Assignment & 30\%\\
-Reading Assignments & 20\%\\ \\
+Assignments & 70\% \\
+Final Report & 30\%\\
 \end{tabular} \\\\
 
 \textbf {\large Letter Grade Distribution:} \\
@@ -82,22 +81,22 @@ Reading Assignments & 20\%\\ \\
 77.00 - 79.99 & C+  & \textless= 59.99 & F \\
 \end{tabular} \\
 .\\
-% Course Policies. These are just examples, modify to your liking.
-\textbf {\large Time Commitment:} Excelling in college level course work typically requires on average three to four hours per credit per week.  Since this is a four credit course, in addition to the time we meet as a class each week, you should expect to spend nine to twelve hours on average reading, writing, or otherwise preparing for this class on a weekly basis.\\
 
-\textbf {\large Attendance:} This class does not have an attendance policy.  However, it will be difficult to learn enough to pass the class without regular participation, as the majority of course content relevant to tests and assignments will be covered in class.  Unannounced opportunities for extra credit will periodically be given in-class.\\
+\textbf {\large Time Commitment:} Excelling in college level course work typically requires on average three to four hours per credit per week.  Since this is a three credit course, in addition to the time we meet as a class each week, you should expect to spend nine to twelve hours on average reading, writing, or otherwise preparing for this class on a weekly basis.\\
 
-\textbf {\large Discussions:} Most lecture sessions will begin with a brief discussion of the assigned materials.  As such, each week students will be asked to come to class prepared with two to three bullet points for discussion - these can represent questions the material raised, commentary, or critiques.  These discussion points may be collected for extra credit.\\
+\textbf {\large Attendance:} This class does not have an attendance policy.  However, it will be difficult to learn enough to pass the class without regular participation, as the majority of course content relevant to tests and assignments will be covered in class.\\
+
+\textbf {\large Discussions:} Most lecture sessions will begin with a brief discussion of the assigned materials.  As such, each week students will be asked to come to class prepared with two to three bullet points for discussion - these can represent questions the material raised, commentary, or critiques. \\
 
 \textbf {\large Classroom Behavior:} Please remain civil during discussions to promote the open exchange of ideas and foster a culture of open dialogue.  Please bear in mind that all students are entitled to their own opinion.  You are expected to listen attentively to each person speaking.  Please refrain from eating during class (and, if you must, make sure it isn't loud!).\\
 
 \textbf {\large Teacher-student conferences:} Students performing at a C level or below are required to schedule a meeting with the instructor to discuss class performance.\\
 
-\textbf {\large Late / Poor Performance Policy:} Assignments will not be accepted late, excepting in documented circumstances (i.e., an illness with a doctor's note).  \textit{Recognizing that it is entirely possible to underperform on key days, your lowest lab assignment grade will be dropped at the end of the semester.}\\
+\textbf {\large Late / Poor Performance Policy:} Assignments will not be accepted late, excepting in documented circumstances (i.e., an illness with a doctor's note). \\
 
-\textbf {\large Final Project:} The final project will be the culmination of your work in the second half of the semester, and will include both a written report and verbal presentation.  Final presentations will begin the final week of the course, and finish on the day of finals. \\
+\textbf {\large Final Project:} The final report will involve the application of the skills taught throughout the semester, and will represent your ability to provide an answer to a real-world question using the data and skills at your disposal. It will include a 5 page written report (inclusive of data visualizations and tables) designed as an executive summary for a decisionmaker.\\
 
-\textbf {\large Important Dates:} The add and drop deadline this semester is September 4th, and withdrawal deadline is October 23rd.
+\textbf {\large Important Dates:} The add and drop deadline this semester is September 8th, and withdrawal deadline is October 27th.
 
 \vspace{4mm}
 \textbf {\LARGE Do not cheat!} \\
@@ -110,7 +109,7 @@ studentconduct/} \\
 % Course Outline
 \textbf {\large Course Outline}:
 
-The course outline can be found on the following two pages.  The weekly content might change as it depends on the progress of the class.
+The course outline can be found below.  The weekly content might change as it depends on the progress of the class.
 
 \begin{table}[h!]
 \small % The size of the table text can be changed depending on content. Remove if desired.
@@ -121,9 +120,8 @@ The course outline can be found on the following two pages.  The weekly content 
 Week 1 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 8/26 - Lecture; 8/28 - Hands On Learning
-	\item Data Applications in  Decisionmaking: A History I  \item Reading: \textit{A Primer for Policy Analysis, Ch. 3- Decision Making by  Organizations: Choosing the Right Tools.}
-	\item Assignment 1:Basic Skills I: What you’ll have to know. 
+	\item 8/31 - Introduction and Computing Environment Setup
+	\item Assignment 1 due midnight Tues Sept 12 - Defining and Simulating Uncertainty. 
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -132,9 +130,7 @@ Week 1 & \begin{minipage}{.85\textwidth}
 Week 2 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 8/31 - Lecture; 9/2 and 9/4 - Hands On Learning
-	\item Data Applications in  Decisionmaking: A History II  \item Reading: \textit{Can Selfishness Save the Environment?  The Atlantic Monthly, Available online}
-	\item Assignment 1:Basic Skills II: What you’ll have to know. 
+	\item 9/5 and 9/7 - Interactive Learning 
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -143,10 +139,8 @@ Week 2 & \begin{minipage}{.85\textwidth}
 Week 3 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 9/7 - Lecture; 9/9 and 9/11 - Hands On Learning
-	\item Challenge I: US Army Corps  \item Reading: \textit{Temporal and spatial changes in social vulnerability to natural hazards - Susan Cutter}
-	\item Assignment 2: Index Construction I
-	\item \textbf{"Basic Skills" Lab due by midnight on 9/11!}
+	\item 9/12 and 9/14 - Human Perception and Uncertainty
+	\item Assignment 2 due midnight Tues Sept 26 - Retrieving Data from Non-traditional Sources
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -155,9 +149,7 @@ Week 3 & \begin{minipage}{.85\textwidth}
 Week 4 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 9/14 - Lecture; 9/16 and 9/18 - Hands On Learning
-	\item Challenge I: Getting the Data  \item Reading: \textit{Vörösmarty, C., P. McIntyre, et al. (2010). "Global threats to human water security and river biodiversity." Nature 467(7315): 555-561.}
-	\item Assignment 2: Index Construction II
+	\item 9/18 and 9/21 - Asking the Right Questions
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -166,9 +158,8 @@ Week 4 & \begin{minipage}{.85\textwidth}
 Week 5 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 9/21 - Lecture; 9/23 and 9/25 - Hands On Learning
-	\item Challenge I: Understanding the Data \item Reading: \textit{Chapter 15 in: Decision Analysis for Management Judgment: Second Edition, Goodwin and Wright, The Analytical Hierarchy Process.}
-	\item Assignment 2: Index Construction III
+	\item 9/26 and 9/28 - Picking the Right Data 
+	\item Assignment 3 due midnight Friday October 13th - Integrating Disparate Data Sources
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -178,12 +169,7 @@ Week 5 & \begin{minipage}{.85\textwidth}
 Week 6 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 9/28 - Lecture; 9/30 and 10/2 - Hands On Learning
-	\item Challenge I: Analyzing the Data 
-	\item Reading: \textit{Clark, G., S. Moser, et al. (1998). "Assessing the vulnerability of coastal communities to extreme  storms: the case of Revere, MA., USA." Mitigation and Adaptation 
-Strategies for Global Change 3(1): 59-82}
-	\item Mid-Term Assignment [3]: Data Reduction: Unlocking GIS Data
-	\item \textbf{Assignment 2 (Working with Data) due by midnight on 10/2!}
+	\item 10/3 and 10/5 - Picking the Right Models
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -192,8 +178,7 @@ Strategies for Global Change 3(1): 59-82}
 Week 7 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 10/5 - Lecture; 10/7 and 10/9 - Hands On Learning
-		\item Mid-Term Assignment [3]: Implementing the AHP –Working with Decisionmakers to make sense of data.
+	\item 10/10 and 10/12 - Quantifying Uncertainty
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -202,10 +187,9 @@ Week 7 & \begin{minipage}{.85\textwidth}
 Week 8 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 10/12 - No Class (Fall Break); 10/14 and 10/16 - Hands On Time for Assignment 3.
-	\item \textbf{Assignment 3 due by 11:59PM EST on 10/16!}
-	\item Reading: \textit{NA}
-	\item NA
+	\item 10/17 - No Class (Fall Break)
+	\item 10/19 - Data Visualization
+	\item Assigment 4 due midnight Thursday 11/2 - Simulating a Solution
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -224,10 +208,7 @@ Week 8 & \begin{minipage}{.85\textwidth}
 Week 9 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 10/19 - Lecture; 10/21 and 10/23 - Hands On Learning.
-	Selecting a Challenge; Forming Groups; Research Protocol
-	\item Reading: \textit{Student-Selected}
-	\item Finding Data: Where do I start looking?
+	\item 10/24 and 10/26 - Distributional Assumptions and Randomization in Decision Making
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -236,11 +217,8 @@ Week 9 & \begin{minipage}{.85\textwidth}
 Week 10 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 10/26 - Ingo Keilitz (National Center for State Courts), WCS; 10/28 and 10/30 - Hands On Learning.
-	\item Challenge II: Getting the Data (Ready)
-	\item Reading: \textit{Student-Selected}
-	\item Working with Data: Cleaning up!
-	\item \textbf{Reading summaries of at least one academic article on your topic of intereste due by midnight on Friday, 10/30 (reading assignment 1)!}
+	\item 10/31 and 11/2 - Masking the Truth and Data Manipulation
+	\item Assignment 5 due midnight Thursday 11/30 - Solution Set Optimization with Decisionmaker Input
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -249,11 +227,7 @@ Week 10 & \begin{minipage}{.85\textwidth}
 Week 11 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 11/2 Justin Mortensen (Save the Children)- TBD; 11/4 and 11/6 - Hands On Learning.
-	\item Challenge II: Getting the Data (Ready)
-	\item Reading: \textit{Student-Selected}
-	\item \textbf{Reading summaries of at least one academic article on your topic of interest due by midnight on Friday, 11/6 (reading assignment 2)!}
-	
+	\item 11/7 and 11/9 - Human Perception in Decision and Policymaking	
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -262,9 +236,7 @@ Week 11 & \begin{minipage}{.85\textwidth}
 Week 12 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 11/9 - Healy Hamilton (NatureServe); 11/11 and 11/13 - Hands On Learning.
-	\item Challenge II: Getting the Data Part 2
-	\item \textbf{Draft Dataset Due for your topic of interest by midnight on 11/13! (Counts as a lab assignment!)}
+	\item 11/14 and 11/16 - Nonparametric Modeling in Decision Making
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -273,11 +245,7 @@ Week 12 & \begin{minipage}{.85\textwidth}
 Week 13 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 11/16 - Nick Giner, ESRI; 11/18 and 11/20 - Hands On Learning.
-	\item Challenge II: Analyzing the Data
-	\item Reading: \textit{Student-Selected}
-	\item Working with Data: Running the Analysis
-	\item \textbf{Reading summaries of at least one academic article on your topic of interest due by midnight on Friday, 11/20 (reading assignment 3)!}
+	\item 11/21 - Hands on Learning, 11/23 - No class (Thanksgiving Break)
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -286,11 +254,7 @@ Week 13 & \begin{minipage}{.85\textwidth}
 Week 14 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 11/23 - Hands On Learning; 11/25 and 11/27 - No Class (Thanksgiving)
-	\item Challenge II: Analyzing the Data
-	\item Working with Data: Building Visualizations
-\item \textbf{First draft powerpoint presentation due 11/23 (counts as a lab assignment!)}	
-	
+	\item 11/27 and11/30 - Communicating with Data
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -299,16 +263,16 @@ Week 14 & \begin{minipage}{.85\textwidth}
 Week 15 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 11/30, 12/2, 12/4 - Final Presentations
+	\item 12/5 and 12/7 - Trust, Data, Decisions and Society
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
 \hline
 
-Final & \begin{minipage}{.85\textwidth}
+Final Project & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 12/7 - 9AM to 12 Noon - Final Presentations
+	\item Due on December 17th by Midnight
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
