--- a/Syllabus/syllabus.tex
+++ b/Syllabus/syllabus.tex
@@ -66,7 +66,8 @@ You must bring a laptop to class  each day unless otherwise noted during lecture
 \textbf {\large Grade Distribution:} \\
 \hspace*{40mm}
 \begin{tabular}{ l l }
-Assignments & 70\% \\
+Weekly Reading Assignments & 10\% \\
+Projects & 60\% \\
 Final Report & 30\%\\
 \end{tabular} \\\\
 
@@ -86,7 +87,7 @@ Final Report & 30\%\\
 
 \textbf {\large Attendance:} This class does not have an attendance policy.  However, it will be difficult to learn enough to pass the class without regular participation, as the majority of course content relevant to tests and assignments will be covered in class.\\
 
-\textbf {\large Discussions:} Most lecture sessions will begin with a brief discussion of the assigned materials.  As such, each week students will be asked to come to class prepared with two to three bullet points for discussion - these can represent questions the material raised, commentary, or critiques. \\
+\textbf {\large Discussions and Reading Assignments:} Most lecture sessions will begin with a discussion of the assigned materials.  As such, most weeks students are required to write a short summary (no more than 1 page) reflecting on a given weeks assigned readings - these summaries can represent questions the material raised, commentary, or critiques. \\
 
 \textbf {\large Classroom Behavior:} Please remain civil during discussions to promote the open exchange of ideas and foster a culture of open dialogue.  Please bear in mind that all students are entitled to their own opinion.  You are expected to listen attentively to each person speaking.  Please refrain from eating during class (and, if you must, make sure it isn't loud!).\\
 
@@ -120,8 +121,8 @@ The course outline can be found below.  The weekly content might change as it de
 Week 1 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 8/31 - Introduction and Computing Environment Setup
-	\item Assignment 1 due midnight Tues Sept 12 - Defining and Simulating Uncertainty. 
+	\item 8/31 - Introduction
+		\item Project 1 assigned, due midnight Fri Sept 15 - Retrieving Data from Non-traditional Sources
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -130,7 +131,7 @@ Week 1 & \begin{minipage}{.85\textwidth}
 Week 2 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 9/5 and 9/7 - Interactive Learning 
+	\item 9/5 - Eric Walter, HPC Account Setup; 9/7 - Interactive Learning 
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -140,7 +141,13 @@ Week 3 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 9/12 and 9/14 - Human Perception and Uncertainty
-	\item Assignment 2 due midnight Tues Sept 26 - Retrieving Data from Non-traditional Sources
+	
+	\item Reading (read before 9/12): "One Vast Index": Google Book Search 
+	\item Reading (read before 9/14): Same Stats, Different Graphs 
+	
+	\item Project 1 due midnight, Friday 9/15
+	
+	\item Project 2 assigned, due midnight Fri Sept 29 - Defining and Simulating Uncertainty. 
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -150,6 +157,12 @@ Week 4 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 9/18 and 9/21 - Asking the Right Questions
+	
+	\item Reading (read before 9/18): Critical Questions for Big Data
+	\item Reading (read before 9/12): Algorithmic Accountability
+	
+	\item Reading Assignment 1 due by Midnight, Friday 9/22
+	
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -159,7 +172,13 @@ Week 5 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 9/26 and 9/28 - Picking the Right Data 
-	\item Assignment 3 due midnight Friday October 13th - Integrating Disparate Data Sources
+	
+	\item Reading (read before 9/26): The parable of Google Flu
+	\item Reading (read before 9/28): 
+	
+	\item Project 2 due midnight, Friday Sept 29.
+	
+	\item Project 3 assigned, due midnight Friday October 13th - Integrating Disparate Data Sources
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -170,6 +189,12 @@ Week 6 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 10/3 and 10/5 - Picking the Right Models
+
+	\item Reading (read before 10/3):
+	\item Reading (read before 10/5):
+	
+	\item Reading Assignment 2 due by Midnight Friday, October 6.
+	
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -179,6 +204,12 @@ Week 7 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 10/10 and 10/12 - Quantifying Uncertainty
+
+	\item Reading (Read before 10/10):
+	\item Reading (Read before 10/12):
+	
+	\item Project 3 due by midnight, Friday October 13.
+	
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -188,8 +219,9 @@ Week 8 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 10/17 - No Class (Fall Break)
-	\item 10/19 - Data Visualization
-	\item Assigment 4 due midnight Thursday 11/2 - Simulating a Solution
+	\item 10/19 - Data Visualization (No Reading)
+	
+	\item Project 4 assigned, due midnight Friday 11/3 - Simulating a Solution
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -197,6 +229,8 @@ Week 8 & \begin{minipage}{.85\textwidth}
 
 \end{tabular} 
 \end{table}
+
+\pagebreak
 
 \begin{table}[h!]
 \small % The size of the table text can be changed depending on content. Remove if desired.
@@ -209,6 +243,12 @@ Week 9 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 10/24 and 10/26 - Distributional Assumptions and Randomization in Decision Making
+	
+	\item Reading (Read before 10/24):
+	\item Reading (Read before 10/26):
+	
+	\item Reading Assignment 3 due by Midnight Friday, October 27th
+	
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -217,8 +257,12 @@ Week 9 & \begin{minipage}{.85\textwidth}
 Week 10 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
+	
 	\item 10/31 and 11/2 - Masking the Truth and Data Manipulation
-	\item Assignment 5 due midnight Thursday 11/30 - Solution Set Optimization with Decisionmaker Input
+	
+	\item Project 4 due by Midnight Friday, November 3rd.
+		
+	\item Project 5 assigned, due midnight Friday 12/1 - Solution Set Optimization with Decisionmaker Input
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -228,6 +272,12 @@ Week 11 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 11/7 and 11/9 - Human Perception in Decision and Policymaking	
+
+	\item Reading (Read before 11/7):
+	\item Reading (Read before 11/9):
+	
+	\item Reading Assignment 4 due by Midnight Friday, November 10th.	
+	
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -237,6 +287,12 @@ Week 12 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 11/14 and 11/16 - Nonparametric Modeling in Decision Making
+	
+	\item Reading (Read before 11/14):
+	\item Reading (Read before 11/16):
+	
+	\item Reading Assignment 5 due by Midnight Friday, November 17th.	
+	
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -254,7 +310,13 @@ Week 13 & \begin{minipage}{.85\textwidth}
 Week 14 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
-	\item 11/27 and11/30 - Communicating with Data
+	\item 11/27 and 11/30 - Communicating with Data
+
+	\item Reading (Read before 11/27):
+	\item Reading (Read before 11/30):
+	
+	\item Project 5 due on Friday, December 1st by midnight.	
+	
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
@@ -264,6 +326,13 @@ Week 15 & \begin{minipage}{.85\textwidth}
 \begin{itemize} \itemsep-0.4em
 	\vspace{1mm}
 	\item 12/5 and 12/7 - Trust, Data, Decisions and Society
+	
+	\item Reading (Read before 12/5):
+	\item Reading (Read before 12/7):
+	
+	\item No reading assignment due this week.
+	
+	\item Final project assigned, due on December 17th by midnight.
 	\vspace{1mm}
 \end{itemize}
 \end{minipage} \\
